--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
         "zendframework/zend-servicemanager": "^3.1.1",
         "zendframework/zend-session": "^2.7.3",
         "zendframework/zend-log": "^2.9.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "SimpleInvoices\\": "include/SimpleInvoices/"
+        }
     }
 }
