--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "zendframework/zend-eventmanager": "^3.0.1",
         "zendframework/zend-servicemanager": "^3.1.1",
         "zendframework/zend-session": "^2.7.3",
-        "zendframework/zend-log": "^2.9.1"
+        "zendframework/zend-log": "^2.9.1",
+        "zendframework/zend-loader": "^2.5.1"
     },
     "autoload": {
         "psr-4": {
