--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "zendframework/zend-servicemanager": "^3.1.1",
         "zendframework/zend-session": "^2.7.3",
         "zendframework/zend-log": "^2.9.1",
-        "zendframework/zend-loader": "^2.5.1"
+        "zendframework/zend-loader": "^2.5.1",
+        "zendframework/zend-permissions-acl": "^2.6.0",
+        "zendframework/zend-json": "^3.0.0"
     },
     "autoload": {
         "psr-4": {
