Replaced Zend_Config with Zend\Config

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "zendframework/zend-permissions-acl": "^2.6.0",
         "zendframework/zend-http": "^2.5.5",
         "zendframework/zend-mail": "^2.7.1",
+        "zendframework/zend-config": "^2.6.0",
         "zendframework/zend-json": "^3.0.0"
     },
     "autoload": {
