--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "zendframework/zend-http": "^2.5.5",
         "zendframework/zend-mail": "^2.7.1",
         "zendframework/zend-config": "^2.6.0",
+        "smarty/smarty": "v2.6.30",
         "zendframework/zend-json": "^3.0.0"
     },
     "autoload": {
