--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "zendframework/zend-mail": "^2.7.1",
         "zendframework/zend-config": "^2.6.0",
         "zendframework/zend-db": "^2.8.2",
+        "zendframework/zend-authentication": "^2.5.3",
         "smarty/smarty": "v2.6.30",
         "zendframework/zend-json": "^3.0.0"
     },
