--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "GPLv3",
     "require": {
         "php": "^5.6 || ^7.0",
-        "zendframework/zendframework1": "1.12.20",
+        "ext-intl" : "*",
         "container-interop/container-interop": "^1.1.0",
         "zendframework/zend-stdlib": "^3.1.0",
         "zendframework/zend-eventmanager": "^3.0.1",
@@ -19,6 +19,7 @@
         "zendframework/zend-config": "^2.6.0",
         "zendframework/zend-db": "^2.8.2",
         "zendframework/zend-authentication": "^2.5.3",
+        "zendframework/zend-i18n": "^2.7.3",
         "smarty/smarty": "v2.6.30",
         "ezyang/htmlpurifier": "v4.8.0",
         "zendframework/zend-json": "^3.0.0"
