--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "zendframework/zend-db": "^2.8.2",
         "zendframework/zend-authentication": "^2.5.3",
         "zendframework/zend-i18n": "^2.7.3",
+        "zendframework/zend-view": "^2.8.1",
         "smarty/smarty": "v2.6.30",
         "ezyang/htmlpurifier": "v4.8.0",
         "zendframework/zend-json": "^3.0.0"
